# BranchAndBound

./: .gitignore  Cargo.toml  README.md  pyproject.toml
BranchAndBound/: Cargo.toml  README.md
BranchAndBound/examples/: association_rules_standalone.rs
BranchAndBound/src/: lib.rs
BranchAndBound/src/solvers/: best_first.rs  bfs.rs  dfs.rs
branch_and_bound/: Cargo.toml
branch_and_bound/examples/: association_rules_standalone.rs
branch_and_bound/src/: lib.rs
branch_and_bound/src/solvers/: best_first.rs  bfs.rs  dfs.rs
data/: test_data.txt
examples/branch_and_bound/rust/: association_rules.rs  association_rules_standalone.rs
examples/kingfisher/python/: advanced_example.py  example.py
feature_selection/: Cargo.toml  README.md  example.py  pyproject.toml
feature_selection/examples/: simple_regression.rs
feature_selection/python/feature_selection_bnb/: __init__.py
feature_selection/src/: lib.rs
kingfisher/: Cargo.toml  README.md  example.py  pyproject.toml
kingfisher/python/kingfisher_bnb/: __init__.py
kingfisher/src/: lib.rs  main.rs
kingfisher/tests/: search_tests.rs
python/kingfisher/: __init__.py  utils.py
