[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kingfisher-bnb"
version = "0.1.0"
description = "Fast Kingfisher rule mining using parallel Branch and Bound search."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Paavo" }
]
dependencies = [
    "numpy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kingfisher_bnb.kingfisher_bnb_extension"
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.12.6",
]
